--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="fragment_label_user_trash">ゴミ箱</string>
     <string name="label_no_user">ユーザが保存されていません。</string>
     <string name="label_no_trash">ゴミ箱は空です。</string>
+    <string name="label_please_sign">マスターキーを設定してください。</string>
+    <string name="label_please_login">ログインしてください。</string>
     <string name="info_msg_save_successful">保存しました。</string>
     <string name="info_msg_clear_trash">ゴミ箱を空にしました。</string>
     <string name="info_msg_signed">サインインに成功しました。</string>
