--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?><!--
+Copyright 2021 sakibeko
+-->
 <resources>
     <string name="app_name">PsMan</string>
     <string name="button_hint_service_name">サービス名</string>
