--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@ Copyright 2021 sakibeko
     <string name="fragment_label_user_list">一覧</string>
     <string name="fragment_label_user_edit">編集</string>
     <string name="fragment_label_user_trash">ゴミ箱</string>
+    <string name="title_user_management">ユーザ管理</string>
+    <string name="title_user_trash">ゴミ箱</string>
     <string name="label_no_user">ユーザが保存されていません。</string>
     <string name="label_no_trash">ゴミ箱は空です。</string>
     <string name="label_please_sign">マスターキーを設定してください。</string>
