--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@ Copyright 2021 sakibeko
 -->
 <resources>
     <string name="app_name">PsMan</string>
-    <string name="button_hint_service_name">サービス名</string>
-    <string name="button_hint_user_name">ユーザ名</string>
-    <string name="button_hint_password">パスワード</string>
-    <string name="button_hint_password_for_confirm">パスワード(確認用)</string>
+    <string name="hint_service_name">サービス名</string>
+    <string name="hint_user_name">ユーザ名</string>
+    <string name="hint_password">パスワード</string>
+    <string name="hint_password_for_confirm">パスワード(確認用)</string>
     <string name="fragment_label_user_list">一覧</string>
     <string name="fragment_label_user_edit">編集</string>
     <string name="fragment_label_user_trash">ゴミ箱</string>
